<resources>
    <string name="app_name">SelfDicWithJetPack</string>
    <string name="action_settings">Settings</string>
    <string name="action_display">Display</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="display_fragment_label">Display Fragment</string>
    <string name="setting_fragment_label">Setting Fragment</string>
    <string name="dic_create_fragment_label">Dic Create Fragment</string>
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="random_fragment_label">Random Fragment</string>
    <string name="random_config_activity_label">Random Config Activity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="display_query">查询：%s</string>
    <string name="display_result">结果：%s</string>

    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- shortcuts -->
    <string name="shortcut_disable_message">quick remember is temporary closed</string>
    <string name="shortcut_long_label">quick remember</string>
    <string name="shortcut_short_label">jump into quick remember</string>
</resources>