<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFrag">

    <!--    <include app:graph="@navigation/nav_login" />-->

    <!--    <action> action 也可以抽取成全局的 </action>-->

    <fragment
        android:id="@+id/LoginFrag"
        android:name="com.example.selfdicwithjetpack.login.LoginFrag"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/login_frag">

        <action
            android:id="@+id/action_LoginFrag_toDisplayFrag"
            app:destination="@+id/DisplayFrag"
            app:enterAnim="@anim/alpha_01_10_duration_3000"
            app:popUpTo="@+id/LoginFrag"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true" />

        <action
            android:id="@+id/action_LoginFrag_showPrivacyDialog"
            app:destination="@+id/PrivacyDialog" />
    </fragment>

    <dialog
        android:id="@+id/PrivacyDialog"
        android:name="com.example.selfdicwithjetpack.general.PrivacyDialog" />

    <fragment
        android:id="@+id/DisplayFrag"
        android:name="com.example.selfdicwithjetpack.display.DisplayFrag"
        android:label="@string/display_fragment_label"
        tools:layout="@layout/display_frag">

        <action
            android:id="@+id/action_DisplayFrag_to_DetailFrag"
            app:destination="@id/DetailFrag" />
        <action
            android:id="@+id/action_DisplayFrag_to_RandomFrag"
            app:destination="@id/RandomFrag" />

        <action
            android:id="@+id/action_DisplayFrag_to_DicCreateFrag"
            app:destination="@+id/DicCreateFrag" />
    </fragment>

    <fragment
        android:id="@+id/DicCreateFrag"
        android:name="com.example.selfdicwithjetpack.dic.DicCreateFrag"
        android:label="@string/dic_create_fragment_label"
        tools:layout="@layout/dic_create_frag">

    </fragment>

    <fragment
        android:id="@+id/DetailFrag"
        android:name="com.example.selfdicwithjetpack.detail.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/detail_frag">

        <argument
            android:name="src"
            app:argType="string" />
        <argument
            android:name="dst"
            app:argType="string" />
        <argument
            android:name="sentence"
            app:argType="string" />

        <action
            android:id="@+id/action_DetailFrag_to_DisplayFrag"
            app:destination="@id/DisplayFrag" />

    </fragment>

    <activity
        android:id="@+id/RandomConfigAct"
        android:name="com.example.selfdicwithjetpack.random.RandomConfigAct"
        android:label="@string/random_config_activity_label"
        app:action="android.intent.action.VIEW"
        app:dataPattern="https://com.tpout.selfdicwithjetpack?order={order}"
        app:targetPackage="com.example.selfdicwithjetpack">
        <argument
            android:name="order"
            app:argType="boolean" />
    </activity>

    <fragment
        android:id="@+id/RandomFrag"
        android:name="com.example.selfdicwithjetpack.random.RandomFrag"
        android:label="@string/random_fragment_label"
        tools:layout="@layout/random_frag">

        <action
            android:id="@+id/action_RandomFrag_to_RandomConfigAct"
            app:destination="@+id/RandomConfigAct" />

        <action
            android:id="@+id/action_RandomFrag_to_DisplayFrag"
            app:destination="@id/DisplayFrag" />
    </fragment>
</navigation>